--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 <h3 id="interests-for-fun-and-profit">Interests for fun and profit</h3>
 
 <ul>
-  <li>Renewable energy <img class="emoji" title=":sunny:" alt=":sunny:" src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png" height="20" width="20"><img class="emoji" title=":dash:" alt=":dash:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4a8.png" height="20" width="20">
+  <li>Renewable energy <img class="emoji" title=":wind_face:" alt=":wind_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f32c.png" height="20" width="20"><img class="emoji" title=":sunny:" alt=":sunny:" src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png" height="20" width="20">
 </li>
   <li>Li-ion batteries <img class="emoji" title=":battery:" alt=":battery:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f50b.png" height="20" width="20">
 </li>
