--- a/about/index.html
+++ b/about/index.html
@@ -94,11 +94,15 @@ window.onload = wrap_img;
 </li>
   <li>Education 🎓</li>
   <li>Investing <img class="emoji" title=":chart_with_upwards_trend:" alt=":chart_with_upwards_trend:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4c8.png" height="20" width="20"> (buy and hold - don’t compete with robots!)</li>
+  <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> (almost always fun - definitely no profit!) Using <a href="https://www.lapavoni.com/en/product/professional-rame-gold/">La Pavoni Europiccola 1995</a> lever machine and <a href="https://www.nichecoffee.co.uk/">Niche Zero</a> grinder</li>
+  <li>Building computers <img class="emoji" title=":desktop_computer:" alt=":desktop_computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f5a5.png" height="20" width="20">
+</li>
   <li>Reading <img class="emoji" title=":books:" alt=":books:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png" height="20" width="20">
 </li>
   <li>Languages <img class="emoji" title=":sweden:" alt=":sweden:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1f8-1f1ea.png" height="20" width="20"> <img class="emoji" title=":uk:" alt=":uk:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1ec-1f1e7.png" height="20" width="20"> <img class="emoji" title=":es:" alt=":es:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1ea-1f1f8.png" height="20" width="20"> <img class="emoji" title=":fr:" alt=":fr:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1eb-1f1f7.png" height="20" width="20">
 </li>
-  <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> (almost always fun - definitely no profit!)</li>
+  <li>Plants <img class="emoji" title=":seedling:" alt=":seedling:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f331.png" height="20" width="20">
+</li>
 </ul>
 
 
