deploy: ea04db05f89d637fbcdd6c9575b91e6227d250f6

--- a/about/index.html
+++ b/about/index.html
@@ -94,6 +94,8 @@ window.onload = wrap_img;
 </li>
   <li>Education 🎓</li>
   <li>Investing <img class="emoji" title=":chart_with_upwards_trend:" alt=":chart_with_upwards_trend:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4c8.png" height="20" width="20"> (buy and hold - don’t compete with robots!)</li>
+  <li>Donating to charity <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20">
+</li>
   <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> (almost always fun - definitely no profit!) Using <a href="https://www.lapavoni.com/en/product/professional-rame-gold/">La Pavoni Europiccola 1995</a> lever machine and <a href="https://www.nichecoffee.co.uk/">Niche Zero</a> grinder</li>
   <li>Building computers <img class="emoji" title=":desktop_computer:" alt=":desktop_computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f5a5.png" height="20" width="20">
 </li>
