--- a/about/index.html
+++ b/about/index.html
@@ -93,11 +93,13 @@ window.onload = wrap_img;
   <li>Technology <img class="emoji" title=":computer:" alt=":computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4bb.png" height="20" width="20">
 </li>
   <li>Education 🎓</li>
-  <li>Investing <img class="emoji" title=":chart_with_upwards_trend:" alt=":chart_with_upwards_trend:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4c8.png" height="20" width="20"> (buy and hold - don’t compete with robots!)</li>
+  <li>Investing <img class="emoji" title=":chart_with_upwards_trend:" alt=":chart_with_upwards_trend:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4c8.png" height="20" width="20">
+</li>
   <li>Donating to charity <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20">
 </li>
-  <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> (almost always fun - definitely no profit!) Using <a href="https://www.lapavoni.com/en/product/professional-rame-gold/">La Pavoni Europiccola 1995</a> lever machine and <a href="https://www.nichecoffee.co.uk/">Niche Zero</a> grinder</li>
-  <li>Building computers <img class="emoji" title=":desktop_computer:" alt=":desktop_computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f5a5.png" height="20" width="20">
+  <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> using <a href="https://www.lapavoni.com/en/product/professional-rame-gold/">La Pavoni Europiccola 1995</a> and <a href="https://www.nichecoffee.co.uk/">Niche Zero</a>
+</li>
+  <li>Building computers <img class="emoji" title=":wrench:" alt=":wrench:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f527.png" height="20" width="20"> <img class="emoji" title=":desktop_computer:" alt=":desktop_computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f5a5.png" height="20" width="20">
 </li>
   <li>Reading <img class="emoji" title=":books:" alt=":books:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png" height="20" width="20">
 </li>
