--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://ulmefors.com/about/" />
 <meta property="og:site_name" content="marcus ulmefors" />
 <script type="application/ld+json">
-{"url":"https://ulmefors.com/about/","headline":"About","@type":"WebSite","name":"marcus ulmefors","description":"a place for things","@context":"https://schema.org"}</script>
+{"headline":"About","url":"https://ulmefors.com/about/","@type":"WebSite","name":"marcus ulmefors","description":"a place for things","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://ulmefors.com/feed.xml" title="marcus ulmefors" /><!-- the domain name gets auto inserted from the config file -->
 
@@ -131,7 +131,7 @@ window.onload = wrap_img;
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/feed.xml">
+          <a href="https://ulmefors.com/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
@@ -145,8 +145,20 @@ window.onload = wrap_img;
 
     <div class="social-links">
 <ul class="social-media-list">
-<li><a rel="me" href="https://github.com/ulmefors" target="_blank" title="ulmefors"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li>
-<li><a rel="me" href="https://www.linkedin.com/in/ulmefors" target="_blank" title="ulmefors"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a></li>
+<li>
+  <a rel="me" href="https://www.linkedin.com/in/ulmefors/" target="_blank" title="linkedin">
+    <svg class="svg-icon grey">
+      <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a rel="me" href="https://github.com/ulmefors" target="_blank" title="github">
+    <svg class="svg-icon grey">
+      <use xlink:href="/assets/minima-social-icons.svg#github"></use>
+    </svg>
+  </a>
+</li>
 </ul>
 </div>
 
