--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="marcus ulmefors" />
 <meta property="og:image" content="https://ulmefors.com/images/logo.png" />
 <script type="application/ld+json">
-{"url":"https://ulmefors.com/","headline":"marcus ulmefors","@type":"WebSite","image":"https://ulmefors.com/images/logo.png","name":"marcus ulmefors","description":"a place for things","@context":"https://schema.org"}</script>
+{"headline":"marcus ulmefors","url":"https://ulmefors.com/","@type":"WebSite","image":"https://ulmefors.com/images/logo.png","name":"marcus ulmefors","description":"a place for things","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://ulmefors.com/feed.xml" title="marcus ulmefors" /><!-- the domain name gets auto inserted from the config file -->
 
@@ -142,7 +142,7 @@ window.onload = wrap_img;
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/feed.xml">
+          <a href="https://ulmefors.com/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
@@ -154,7 +154,21 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/ulmefors" target="_blank" title="ulmefors"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg></a></li><li><a rel="me" href="https://www.linkedin.com/in/ulmefors" target="_blank" title="ulmefors"><svg class="svg-icon grey"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li>
+  <a rel="me" href="https://www.linkedin.com/in/ulmefors/" target="_blank" title="linkedin">
+    <svg class="svg-icon grey">
+      <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
+    </svg>
+  </a>
+</li>
+<li>
+  <a rel="me" href="https://github.com/ulmefors" target="_blank" title="github">
+    <svg class="svg-icon grey">
+      <use xlink:href="/assets/minima-social-icons.svg#github"></use>
+    </svg>
+  </a>
+</li>
+</ul>
 </div>
 
   </div>
