--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://ulmefors.com/about/" />
 <meta property="og:site_name" content="marcus ulmefors" />
 <script type="application/ld+json">
-{"headline":"About","url":"https://ulmefors.com/about/","@type":"WebSite","name":"marcus ulmefors","description":"a place for things","@context":"https://schema.org"}</script>
+{"url":"https://ulmefors.com/about/","@type":"WebSite","name":"marcus ulmefors","headline":"About","description":"a place for things","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://ulmefors.com/feed.xml" title="marcus ulmefors" /><!-- the domain name gets auto inserted from the config file -->
 
