--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@ window.onload = wrap_img;
   <li>Education 🎓</li>
   <li>Investing <img class="emoji" title=":chart_with_upwards_trend:" alt=":chart_with_upwards_trend:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4c8.png" height="20" width="20">
 </li>
-  <li>Effective altruism <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20">
+  <li>Giving what we can <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20">
 </li>
   <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> using <a href="https://www.lapavoni.com/en/product/professional-rame-gold/">La Pavoni Europiccola 1995</a> and <a href="https://www.nichecoffee.co.uk/">Niche Zero</a>
 </li>
