--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@ window.onload = wrap_img;
 </li>
   <li>Giving what we can <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20">
 </li>
-  <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> using <a href="https://www.lapavoni.com/en/product/professional-rame-gold/">La Pavoni Europiccola 1995</a> and <a href="https://www.nichecoffee.co.uk/">Niche Zero</a>
+  <li>Espresso <img class="emoji" title=":coffee:" alt=":coffee:" src="https://github.githubassets.com/images/icons/emoji/unicode/2615.png" height="20" width="20"> using <a href="https://www.lapavoni.com/en/product/esperto-edotto/">La Pavoni Esperto Edotto</a> and <a href="https://www.nichecoffee.co.uk/products/niche-zero">Niche Zero</a>
 </li>
   <li>Building computers <img class="emoji" title=":wrench:" alt=":wrench:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f527.png" height="20" width="20"> <img class="emoji" title=":desktop_computer:" alt=":desktop_computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f5a5.png" height="20" width="20">
 </li>
