--- a/about/index.html
+++ b/about/index.html
@@ -87,6 +87,8 @@ window.onload = wrap_img;
 
 <p>Hello <img class="emoji" title=":wave:" alt=":wave:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44b.png" height="20" width="20"> I’m Marcus. Since 2019 living in Stockholm, Sweden <img class="emoji" title=":sweden:" alt=":sweden:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1f8-1f1ea.png" height="20" width="20"></p>
 
+<p><a href="/">See all publications</a></p>
+
 <h3 id="interests-for-fun-and-profit">Interests for fun and profit</h3>
 
 <ul>
@@ -110,6 +112,8 @@ window.onload = wrap_img;
   <li>Building computers <img class="emoji" title=":wrench:" alt=":wrench:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f527.png" height="20" width="20"> <img class="emoji" title=":desktop_computer:" alt=":desktop_computer:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f5a5.png" height="20" width="20">
 </li>
   <li>Reading <img class="emoji" title=":books:" alt=":books:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png" height="20" width="20">
+</li>
+  <li>Parenting <img class="emoji" title=":baby:" alt=":baby:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f476.png" height="20" width="20">
 </li>
   <li>Languages <img class="emoji" title=":sweden:" alt=":sweden:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1f8-1f1ea.png" height="20" width="20"> <img class="emoji" title=":uk:" alt=":uk:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1ec-1f1e7.png" height="20" width="20"> <img class="emoji" title=":es:" alt=":es:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1ea-1f1f8.png" height="20" width="20"> <img class="emoji" title=":fr:" alt=":fr:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f1eb-1f1f7.png" height="20" width="20">
 </li>
